--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.ryandw11</groupId>
     <artifactId>ODSCompressionPlus</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>NewLayout-SNAPSHOT</version>
 
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>me.ryandw11</groupId>
             <artifactId>ods</artifactId>
-            <version>1.0.3-SNAPSHOT</version>
+            <version>NewLayout-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
