--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.ryandw11</groupId>
     <artifactId>ODSCompressionPlus</artifactId>
-    <version>NewLayout-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
