--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
             </plugin>
         </plugins>
     </build>
+         
+    <repositories>
+        <repository>
+            <id>ObjectDataStructure</id>
+            <url>https://repo.ryandw11.com/repository/maven-releases/</url>
+        </repository>
+    </repositories>
 
     <distributionManagement>
         <repository>
